--- a/index.html
+++ b/index.html
@@ -26,28 +26,28 @@
 
   <section class="products">
     <div class="product">
-      <img src="C:\Users\UDMCL03-33\Downloads\key1.jpg"?random=1" alt="Product 1">
+      <img src= "key1.jpg"?random=1" alt="Product 1">
       <h3>Bluelock</h3>
       <p>₱150</p>
       <button onclick="addToCart('Bluelock', 150)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="C:\Users\UDMCL03-33\Downloads\key2.jpg"?random=2" alt="Product 2">
+      <img src="key2.jpg"?random=2" alt="Product 2">
       <h3>Birds</h3>
       <p>₱150</p>
       <button onclick="addToCart('Birds', 150)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="C:\Users\UDMCL03-33\Downloads\key3.jpg"?random=3" alt="Product 3">
+      <img src="key3.jpg"?random=3" alt="Product 3">
       <h3>Milktea</h3>
       <p>₱150</p>
       <button onclick="addToCart('Milktea', 150)">Add to Cart</button>
     </div>
 
     <div class="product">
-      <img src="C:\Users\UDMCL03-33\Downloads\key4.jpg"?random=4" alt="Product 4">
+      <img src="key4.jpg"?random=4" alt="Product 4">
       <h3>Capybara</h3>
       <p>₱100</p>
       <button onclick="addToCart('Capybara', 100)">Add to Cart</button>
@@ -174,3 +174,4 @@ function submitOrder(event) {
   document.querySelector("form").reset();
 }
 </script>
+
